Migration - add nullable attribute to dob, gender, phone, address fields on customers table

--- a/.env.example
+++ b/.env.example
@@ -52,8 +52,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-reCAPTCHA_v2_SITEKEY='6LdPO6sdAAAAAPPN7ULd7eUcJpHmrxIluLrH9Sa_'
-reCAPTCHA_v2_SECRETKEY='6LdPO6sdAAAAAJaIYCG-g1DaPWkUrYR3aYoHehlE'
+RC_V2_SITEKEY='6LdPO6sdAAAAAPPN7ULd7eUcJpHmrxIluLrH9Sa_'
+RC_v2_SECRETKEY='6LdPO6sdAAAAAJaIYCG-g1DaPWkUrYR3aYoHehlE'
 
 MIDTRANS_MERCHANT_ID='G072405875'
 MIDTRANS_CLIENT_KEY='SB-Mid-client-hNTuw5SfqhiK7oxG'
